--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -5,6 +5,8 @@
     <body>
         <div class="main">
              {{> header }}
+             <p>This site was created by nuruddin,using weather stack api and mapbox  api.</p> 
+             
             <img class="potrait" src="img/1.jpg" alt="not loaded">
             <p>{{name}}</p>
             </div>
