changed index page

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -22,6 +22,12 @@
                 <p id="msg2">
 
                 </p>
+                <p id="msg3">
+
+                </p>
+                <p id="msg4">
+
+                </p>
             </div>
         </div>
         
